@@ -1,3 +1,8 @@
+2008-05-24  Andreas Schwab  <schwab@suse.de>
+
+	* linespec.c (decode_objc): Save current language around call to
+	get_selected_block.
+
 2008-05-23  Joel Brobecker  <brobecker@adacore.com>
 
 	* valprint.h (get_array_bounds): Renames get_array_low_bound.
